project: add interaction mixins/utils